lib/flutter_pgm_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/include/*.h`.
///
/// Regenerate bindings with `flutter pub run ffigen --config ffigen_pgm.yaml`.
///
class FlutterMtcBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FlutterMtcBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FlutterMtcBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
  void pgm_c_version(
    ffi.Pointer<ffi.Char> pcVersion,
  ) {
    return _pgm_c_version(
      pcVersion,
    );
  }

  late final _pgm_c_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'pgm_c_version');
  late final _pgm_c_version =
      _pgm_c_versionPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// 设置回调函数, 进程拉起即可调用, 生存期内只需调用一次
  void pgm_c_init(
    PGM_C_EVENT_PROCESSOR eventProcessorCb,
    PGM_C_LOAD_GROUP loadGroupCb,
    PGM_C_UPDATE_GROUP updateGroupCb,
    PGM_C_UPDATE_STATUSES updateStatusesCb,
    PGM_C_UPDATE_RPOPS updatePropsCb,
    PGM_C_INSERT_MSGS insertMsgsCb,
    PGM_C_GET_TICKS getTicksCb,
  ) {
    return _pgm_c_init(
      eventProcessorCb,
      loadGroupCb,
      updateGroupCb,
      updateStatusesCb,
      updatePropsCb,
      insertMsgsCb,
      getTicksCb,
    );
  }

  late final _pgm_c_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              PGM_C_EVENT_PROCESSOR,
              PGM_C_LOAD_GROUP,
              PGM_C_UPDATE_GROUP,
              PGM_C_UPDATE_STATUSES,
              PGM_C_UPDATE_RPOPS,
              PGM_C_INSERT_MSGS,
              PGM_C_GET_TICKS)>>('pgm_c_init');
  late final _pgm_c_init = _pgm_c_initPtr.asFunction<
      void Function(
          PGM_C_EVENT_PROCESSOR,
          PGM_C_LOAD_GROUP,
          PGM_C_UPDATE_GROUP,
          PGM_C_UPDATE_STATUSES,
          PGM_C_UPDATE_RPOPS,
          PGM_C_INSERT_MSGS,
          PGM_C_GET_TICKS)>();

  /// 控制库的内部参数, 暂时未用
  int pgm_c_set_cfgs(
    ffi.Pointer<JStrStrMap> pcCfgs,
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_c_set_cfgs(
      pcCfgs,
      pcErr,
    );
  }

  late final _pgm_c_set_cfgsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<JStrStrMap>,
              ffi.Pointer<ffi.Char>)>>('pgm_c_set_cfgs');
  late final _pgm_c_set_cfgs = _pgm_c_set_cfgsPtr.asFunction<
      int Function(ffi.Pointer<JStrStrMap>, ffi.Pointer<ffi.Char>)>();

  /// 1. 在sdk的login succ回调之后调用, pgm_logined以下声明的函数, 都必须晚于pgm_logined调用
  /// 2. logout再login succ后需重新调用
  /// 3. MtcCliReconnectOkNotification回调无需调用
  int pgm_c_logined(
    ffi.Pointer<ffi.Char> pcCookie,
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_c_logined(
      pcCookie,
      pcErr,
    );
  }

  late final _pgm_c_loginedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('pgm_c_logined');
  late final _pgm_c_logined = _pgm_c_loginedPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  int pgm_c_get_cur_time(
    ffi.Pointer<ffi.Int64> plCurTimeMs,
  ) {
    return _pgm_c_get_cur_time(
      plCurTimeMs,
    );
  }

  late final _pgm_c_get_cur_timePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Int64>)>>(
          'pgm_c_get_cur_time');
  late final _pgm_c_get_cur_time =
      _pgm_c_get_cur_timePtr.asFunction<int Function(ffi.Pointer<ffi.Int64>)>();

  /// 异常实时上报
  /// SELF_USER_ID RECORD_TIME内部自动添加, 不需要传入
  int pgm_c_record_err(
    ffi.Pointer<JStrStrMap> pcErrRecord,
  ) {
    return _pgm_c_record_err(
      pcErrRecord,
    );
  }

  late final _pgm_c_record_errPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<JStrStrMap>)>>(
          'pgm_c_record_err');
  late final _pgm_c_record_err =
      _pgm_c_record_errPtr.asFunction<int Function(ffi.Pointer<JStrStrMap>)>();

  /// flush db异常恢复后, 调用pgm_flush_all清空待写队列
  int pgm_c_flush_data(
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_c_flush_data(
      pcErr,
    );
  }

  late final _pgm_c_flush_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'pgm_c_flush_data');
  late final _pgm_c_flush_data =
      _pgm_c_flush_dataPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// 以下接口当cookie重复/请求过频/未登录/入参本地检查有误时返回false. rpc的异步结果通过CookieEnd事件回调
  int pgm_c_refresh_main(
    ffi.Pointer<ffi.Char> pcCookie,
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_c_refresh_main(
      pcCookie,
      pcErr,
    );
  }

  late final _pgm_c_refresh_mainPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('pgm_c_refresh_main');
  late final _pgm_c_refresh_main = _pgm_c_refresh_mainPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// 1. 调用时会追加检查orgId是否是存在于自己的个人列表中, 不存在会直接报错
  /// 2. 如若刷新的同时刚好被踢出组织/另一台登录设备退出组织, 请求发出的同时本地还未更新到该变化, 将通过CookieEnd回调permission-denied:not_in_group
  /// 除此之外, cookieEnd只会回调succ
  int pgm_c_refresh_org(
    ffi.Pointer<ffi.Char> pcCookie,
    ffi.Pointer<ffi.Char> pcOrgId,
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_c_refresh_org(
      pcCookie,
      pcOrgId,
      pcErr,
    );
  }

  late final _pgm_c_refresh_orgPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('pgm_c_refresh_org');
  late final _pgm_c_refresh_org = _pgm_c_refresh_orgPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  /// 1. 无需对方确认的列表修改
  /// 2. 调用方式:
  /// a. 好友(批量)添加: pgm_add_relations(cookie, selfUid, map<uid,Relation(Contact,tagName,tag,nullCfgs)>, err)
  /// b. 直接入群: pgm_add_relations(cookie, selfUid, map<orgId,Relation(Organize,tagName,tag,nullCfgs)>, err), added map size必须为1
  /// c. 拉人入群: pgm_add_relations(cookie, orgId, map<uid,Relation(Member,tagName,tag,nullCfgs)>, err)
  /// 3. CookieEnd 'added_exist'时,表示同时间点发生了异源修改,比如 自己两台正在登录的设备, 同时添加同一个人
  /// 接口保证 会先将这样的列表异源修改flush db, 再回调CookieEnd err!
  int pgm_c_add_relations(
    ffi.Pointer<ffi.Char> pcCookie,
    ffi.Pointer<ffi.Char> pcGroupId,
    ffi.Pointer<JRelationsMap> pcAdded,
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_c_add_relations(
      pcCookie,
      pcGroupId,
      pcAdded,
      pcErr,
    );
  }

  late final _pgm_c_add_relationsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<JRelationsMap>,
              ffi.Pointer<ffi.Char>)>>('pgm_c_add_relations');
  late final _pgm_c_add_relations = _pgm_c_add_relationsPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<JRelationsMap>, ffi.Pointer<ffi.Char>)>();

  /// 1. 调用方式: @groupId是节点所属的列表id, @changed是修改节点id及内容的集合. 比如
  /// a. 设置组织消息免打扰: pgm_change_relations(cookie, orgId, map<selfUid,Relation(preType,preTagName,preTag,preCfgs['ImPush']='0'>, err)
  /// 2. 需要将修改节点修改后的全部内容传入. 故目前存在这样的问题: 2个异源修改同时分别修改不同字段时, 最终可能只有一条生效
  /// 3. CookieEnd 'changed_nonexist'时, 表示同时间点发生了异源修改, 比如 修改自己的群内备注名时刚好群主把自己踢了
  /// 接口保证 会先将这样的他源列表修改flush db, 再回调CookieEnd err!
  int pgm_c_change_relations(
    ffi.Pointer<ffi.Char> pcCookie,
    ffi.Pointer<ffi.Char> pcGroupId,
    ffi.Pointer<JRelationsMap> pcChanged,
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_c_change_relations(
      pcCookie,
      pcGroupId,
      pcChanged,
      pcErr,
    );
  }

  late final _pgm_c_change_relationsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<JRelationsMap>,
              ffi.Pointer<ffi.Char>)>>('pgm_c_change_relations');
  late final _pgm_c_change_relations = _pgm_c_change_relationsPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<JRelationsMap>, ffi.Pointer<ffi.Char>)>();

  /// 1. 即时生效修改. 不等待后端确认. 若后端修改失败, 库内部保证最终重试成功
  /// 2. 只能是修改, 不能是增删, 且一次只能修改一个节点
  /// 3. 尽量只用该接口修改只与显示相关的次要元素, 若用来修改组织消息免打扰,当rpc最终成功前, 可能导致ui效果与实际效果不一致的问题
  /// 4. 调用方式: @groupId是节点所属列表id, @changedId是节点id, changedRel是修改后的节点完整内容
  int pgm_c_nowait_ack_change_relation(
    ffi.Pointer<ffi.Char> pcGroupId,
    ffi.Pointer<ffi.Char> pcChangedId,
    ffi.Pointer<JRelation> pcChangedRel,
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_c_nowait_ack_change_relation(
      pcGroupId,
      pcChangedId,
      pcChangedRel,
      pcErr,
    );
  }

  late final _pgm_c_nowait_ack_change_relationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<JRelation>,
              ffi.Pointer<ffi.Char>)>>('pgm_c_nowait_ack_change_relation');
  late final _pgm_c_nowait_ack_change_relation =
      _pgm_c_nowait_ack_change_relationPtr.asFunction<
          int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<JRelation>, ffi.Pointer<ffi.Char>)>();

  /// 1. 调用方式:
  /// a. 退群: pgm_remove_relations(cookie, selfUid, set<orgId>, err), removed set size必为1
  /// b. 踢群: pgm_remove_relations(cookie, orgId, set<uid>, err)
  /// c. 删除好友尽量不使用pgm_remove_relations, 而改用pgm_change_relations(Stranger)形式实现
  /// 2. 'removed_nonexist'有两种可能
  /// a. 异源修改. 退群时刚好群主把自己踢了的异源修改 或 两台设备同时退一个群
  /// b. rpc发生了单通+重传. 首次调用写成功但response丢失, 导致自动重传, 重传时判定'removed_nonexist'
  /// 目前接口自己无法区分这两种情况. 但上层大部分情况下能够依靠前后短时间内有无Group.Update通知来判定(异源修改都会有通知, 只要网络是通畅的)
  int pgm_c_remove_relations(
    ffi.Pointer<ffi.Char> pcCookie,
    ffi.Pointer<ffi.Char> pcGroupId,
    ffi.Pointer<JStrSet> pcRemoved,
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_c_remove_relations(
      pcCookie,
      pcGroupId,
      pcRemoved,
      pcErr,
    );
  }

  late final _pgm_c_remove_relationsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<JStrSet>,
              ffi.Pointer<ffi.Char>)>>('pgm_c_remove_relations');
  late final _pgm_c_remove_relations = _pgm_c_remove_relationsPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<JStrSet>, ffi.Pointer<ffi.Char>)>();

  /// 查询自己在对方列表中的身份级别. CookieEnd value为String(Group::RelationType), 比如13表示Contact,15表示Strange. 其他非整数值表示失败reason
  int pgm_c_check_relation(
    ffi.Pointer<ffi.Char> pcCookie,
    ffi.Pointer<ffi.Char> pcPeerUid,
    ffi.Pointer<ffi.Char> pcErr,
  ) {
    return _pgm_c_check_relation(
      pcCookie,
      pcPeerUid,
      pcErr,
    );
  }

  late final _pgm_c_check_relationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('pgm_c_check_relation');
  late final _pgm_c_check_relation = _pgm_c_check_relationPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();
